<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LedDemo_of_www_100ask_com"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BUTTON"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ALL_ON"
        />
    <CheckBox
        android:id="@+id/led1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/LED1"
        />
    <CheckBox
        android:id="@+id/led2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LED2"
        android:onClick="onCheckboxClicked"
        />
    <CheckBox
        android:id="@+id/led3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LED3"
        android:onClick="onCheckboxClicked"
        />
    <CheckBox
        android:id="@+id/led4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LED4"
        android:onClick="onCheckboxClicked"
        />


</LinearLayout>